@@ -3184,6 +3184,8 @@ static int action_status(struct mansession *s, const struct message *m)
 			"Channel: %s\r\n"
 			"CallerIDNum: %s\r\n"
 			"CallerIDName: %s\r\n"
+			"ConnectedLineNum: %s\r\n"
+			"ConnectedLineName: %s\r\n"
 			"Accountcode: %s\r\n"
 			"ChannelState: %d\r\n"
 			"ChannelStateDesc: %s\r\n"
@@ -3197,8 +3199,10 @@ static int action_status(struct mansession *s, const struct message *m)
 			"%s"
 			"\r\n",
 			c->name,
-			S_COR(c->caller.id.number.valid, c->caller.id.number.str, ""),
-			S_COR(c->caller.id.name.valid, c->caller.id.name.str, ""),
+			S_COR(c->caller.id.number.valid, c->caller.id.number.str, "<unknown>"),
+			S_COR(c->caller.id.name.valid, c->caller.id.name.str, "<unknown>"),
+			S_COR(c->connected.id.number.valid, c->connected.id.number.str, "<unknown>"),
+			S_COR(c->connected.id.name.valid, c->connected.id.name.str, "<unknown>"),
 			c->accountcode,
 			c->_state,
 			ast_state2str(c->_state), c->context,
@@ -3210,6 +3214,8 @@ static int action_status(struct mansession *s, const struct message *m)
 				"Channel: %s\r\n"
 				"CallerIDNum: %s\r\n"
 				"CallerIDName: %s\r\n"
+				"ConnectedLineNum: %s\r\n"
+				"ConnectedLineName: %s\r\n"
 				"Account: %s\r\n"
 				"State: %s\r\n"
 				"%s"
@@ -3220,6 +3226,8 @@ static int action_status(struct mansession *s, const struct message *m)
 				c->name,
 				S_COR(c->caller.id.number.valid, c->caller.id.number.str, "<unknown>"),
 				S_COR(c->caller.id.name.valid, c->caller.id.name.str, "<unknown>"),
+				S_COR(c->connected.id.number.valid, c->connected.id.number.str, "<unknown>"),
+				S_COR(c->connected.id.name.valid, c->connected.id.name.str, "<unknown>"),
 				c->accountcode,
 				ast_state2str(c->_state), bridge, c->uniqueid,
 				ast_str_buffer(str), idText);
